--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "export": "npm run build && next export && mv out _static"
   },
   "engines": {
-    "node": "21.6"
+    "node": "18.x"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
